--- a/style.css
+++ b/style.css
@@ -40,3 +40,19 @@ a:link,
 a:visited {
   color: var(--color-brand--1);
 }
+
+
+/* SIDEBAR */
+.sidebar {
+    flex-basis: 50rem;
+    background-color: var(--color-dark--1);
+    padding: 3rem 5rem 4rem 5rem;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .logo {
+    height: 5.2rem;
+    align-self: center;
+    margin-bottom: 4rem;
+  }
